--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -97,17 +97,52 @@
         android:layout_centerInParent="true"
         android:background="@drawable/btn_play" />
 
-    <ImageView
+    <!-- <ImageView
         android:id="@+id/btn_shop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/footer"
         android:layout_centerHorizontal="true"
-        android:layout_toStartOf="@+id/btn_challenge"
+        android:layout_toStartOf="@+id/container_challenge"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/shop_card" />
+        android:background="@drawable/shop_card" /> -->
 
-    <ImageView
+    <RelativeLayout
+        android:id="@+id/container_shop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/footer"
+        android:layout_toStartOf="@+id/container_challenge">
+
+        <LinearLayout
+            android:layout_width="80dp"
+            android:layout_height="100dp"
+            android:background="@drawable/card_recto"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_marginBottom="15dp">
+
+            <ImageView
+                android:id="@+id/ico_shop"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/shop"/>
+            <TextView
+                android:id="@+id/shop_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/redColor"
+                android:layout_centerHorizontal="true"
+                android:textSize="10sp"
+                android:layout_margin="5dp"
+                android:fontFamily="@font/roof_runners_active"
+                android:text="@string/main_menu_title_shop"/>
+        </LinearLayout>
+    </RelativeLayout>
+
+    <!-- <ImageView
         android:id="@+id/btn_challenge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -116,14 +151,105 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/challenge_card" />
+        android:background="@drawable/challenge_card" /> -->
 
-    <ImageView
-        android:id="@+id/btn_setting"
+    <RelativeLayout
+        android:id="@+id/container_challenge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/footer"
-        android:layout_toEndOf="@id/btn_challenge"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/setting_card" />
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_centerHorizontal="true">
+
+        <LinearLayout
+            android:layout_width="80dp"
+            android:layout_height="100dp"
+            android:background="@drawable/card_recto"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_marginBottom="15dp">
+
+            <ImageView
+                android:id="@+id/ico_medal"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_centerInParent="true"
+                android:background="@drawable/medal"/>
+            <TextView
+                android:id="@+id/challenge_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/redColor"
+                android:layout_centerHorizontal="true"
+                android:textSize="10sp"
+                android:layout_margin="5dp"
+                android:fontFamily="@font/roof_runners_active"
+                android:text="@string/main_menu_title_challenge"/>
+        </LinearLayout>
+
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/relative_notif"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@id/container_challenge"
+        android:layout_marginTop="-8dp"
+        android:layout_marginRight="-15dp"
+        android:layout_alignTop="@id/container_challenge">
+
+        <ImageView
+            android:id="@+id/container_notif"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/container_notif"/>
+
+        <TextView
+            android:id="@+id/txt_notif"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2"
+            android:fontFamily="@font/roof_runners_active"
+            android:layout_centerInParent="true"
+            android:textColor="@color/whiteColor" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/container_setting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/footer"
+        android:layout_toEndOf="@+id/container_challenge">
+
+        <LinearLayout
+            android:layout_width="80dp"
+            android:layout_height="100dp"
+            android:background="@drawable/card_recto"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_marginBottom="15dp">
+
+            <ImageView
+                android:id="@+id/ico_setting"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/settings"/>
+            <TextView
+                android:id="@+id/setting_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/redColor"
+                android:layout_centerHorizontal="true"
+                android:textSize="10sp"
+                android:layout_margin="5dp"
+                android:fontFamily="@font/roof_runners_active"
+                android:text="@string/main_menu_title_setting"/>
+        </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
