--- a/app/src/main/res/layout/challenge_row.xml
+++ b/app/src/main/res/layout/challenge_row.xml
@@ -63,17 +63,20 @@
                     android:layout_toRightOf="@id/count_award" />
             </RelativeLayout>
 
-        </RelativeLayout>
+            <TextView
+                android:id="@+id/get_award"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:textColor="@color/yellowColor"
+                android:fontFamily="@font/roof_runners_active"
+                android:layout_alignParentBottom="true"
+                android:textSize="12sp"
+                android:layout_alignParentRight="true"
+                android:visibility="invisible"
+                android:layout_margin="2dp"
+                android:text="@string/get_award_new_challenge"/>
 
-        <ImageView
-            android:id="@+id/img_challenge_medal"
-            android:layout_width="@dimen/img_medal_size"
-            android:layout_height="@dimen/img_medal_size"
-            android:background="@drawable/medal"
-            android:layout_alignRight="@id/background_challenge"
-            android:layout_alignBottom="@id/background_challenge"
-            android:layout_marginRight="@dimen/img_medal_margin_right"
-            android:layout_marginBottom="@dimen/img_medal_margin_bottom"
-            android:alpha=".3"/>
+        </RelativeLayout>
     </RelativeLayout>
 </RelativeLayout>
